<resources>
    <string name="app_name">Android Quiz</string>
    <string name="game_theme">This is a quiz about the history of Android OS.</string>
    <string name="score_zero">Score: 0</string>
    <string name="help">Help</string>
    <string name="your_name_text">First thing first, please tell me your name.</string>
    <string name="player_name_hint">Name</string>
    <string name="your_answer_hint">Your answer</string>
    <string name="start_quiz">start quiz</string>


    <string name="edit_text_number_question_one">When was the Android OS unveiled ?</string>
    <string name="edit_text_number_answer_one">2007</string>
    <string name="edit_text_number_question_two">When was the first commercial Android OS running phone available?</string>
    <string name="edit_text_number_answer_two">2008</string>
    <string name="edit_text_number_question_three">When was the Nexus series of devices launched?</string>
    <string name="edit_text_number_answer_three">2010</string>
    <string name="edit_text_number_question_four">In which year Google acquired Android Inc. ?</string>
    <string name="edit_text_number_answer_four">2005</string>
    <string name="edit_text_number_question_five">In which year was Android One launched ?</string>
    <string name="edit_text_number_answer_five">2014</string>
    <string name="edit_text_number_question_six">In which year was Android Studio released?</string>
    <string name="edit_text_number_answer_six">2014</string>

    <string name="edit_text_text_question">Which version of Android OS is on the picture ?</string>
    <string name="edit_text_text_answer_one">CUPCAKE</string>
    <string name="edit_text_text_answer_two">DONUT</string>
    <string name="edit_text_text_answer_three">ECLAIR</string>
    <string name="edit_text_text_answer_four">FROYO</string>
    <string name="edit_text_text_answer_five">GINGERBREAD</string>
    <string name="edit_text_text_answer_six">HONEYCOMB</string>
    <string name="edit_text_text_answer_seven">ICE CREAM SANDWICH</string>
    <string name="edit_text_text_answer_eight">JELLY BEAN</string>
    <string name="edit_text_text_answer_nine">KITKAT</string>
    <string name="edit_text_text_answer_ten">LOLLIPOP</string>
    <string name="edit_text_text_answer_eleven">MARSHMALLOW</string>
    <string name="edit_text_text_answer_twelve">NOUGAT</string>

    <string name="check_box_question_one">Which one(s) are real version of CUPCAKE ?</string>
    <string name="check_box_question_two">Which one(s) are real version of HONEYCOMB ?</string>
    <string name="check_box_question_three">Which one(s) are real version of KITKAT ?</string>
    <string name="check_box_question_four">Which one(s) are real version of JELLY BEAN ?</string>
    <string name="check_box_question_five">Which one(s) are real version of GINGERBREAD ?</string>
    <string name="check_box_false">false</string>
    <string name="check_box_true">true</string>
    <string name="check_box_answer_one_two">1.2</string>
    <string name="check_box_answer_one_four">1.4</string>
    <string name="check_box_answer_one_five">1.5</string>
    <string name="check_box_answer_one_eight">1.8</string>
    <string name="check_box_answer_two_zero">2.0</string>
    <string name="check_box_answer_two_one">2.1</string>
    <string name="check_box_answer_two_two">2.2</string>
    <string name="check_box_answer_two_three">2.3</string>
    <string name="check_box_answer_two_six">2.6</string>
    <string name="check_box_answer_three_zero">3.0</string>
    <string name="check_box_answer_three_one">3.1</string>
    <string name="check_box_answer_three_two">3.2</string>
    <string name="check_box_answer_four_zero">4.0</string>
    <string name="check_box_answer_four_one">4.1</string>
    <string name="check_box_answer_four_two">4.2</string>
    <string name="check_box_answer_four_three">4.3</string>
    <string name="check_box_answer_four_four">4.4</string>
    <string name="check_box_answer_four_five">4.5</string>
    <string name="check_box_answer_five_zero">5.1</string>
    <string name="radio_button_question_one">Android OS was first developed for ?</string>
    <string name="radio_button_question_two">The first public device that runs Android OS ?</string>
    <string name="radio_button_question_three">The first phone by Google?</string>
    <string name="radio_button_question_four">Android application extension?</string>
    <string name="radio_button_question_five">First Android dessert?</string>
    <string name="radio_button_false">false</string>
    <string name="radio_button_true">true</string>
    <string name="radio_button_answer_one_one">car</string>
    <string name="radio_button_answer_one_two">television</string>
    <string name="radio_button_answer_one_three">ATM</string>
    <string name="radio_button_answer_one_four">phone</string>
    <string name="radio_button_answer_one_five">digital camera</string>
    <string name="radio_button_answer_two_one">HTC Dream</string>
    <string name="radio_button_answer_two_two">Sony Ericsson Xperia1</string>
    <string name="radio_button_answer_two_three">Nokia EZ1</string>
    <string name="radio_button_answer_two_four">T-Mobile G1</string>
    <string name="radio_button_answer_two_five">Palm Treo Pro</string>
    <string name="radio_button_answer_three_one">Nexus One</string>
    <string name="radio_button_answer_three_two">Desire</string>
    <string name="radio_button_answer_three_three">EVO 4G</string>
    <string name="radio_button_answer_three_four">Droid X</string>
    <string name="radio_button_answer_three_five">Galaxy S</string>
    <string name="radio_button_answer_four_one">.jar</string>
    <string name="radio_button_answer_four_two">.exe</string>
    <string name="radio_button_answer_four_three">.jad</string>
    <string name="radio_button_answer_four_four">.apk</string>
    <string name="radio_button_answer_four_five">.bat</string>
    <string name="radio_button_answer_five_one">Donut</string>
    <string name="radio_button_answer_five_two">Froyo</string>
    <string name="radio_button_answer_five_three">Cupcake</string>
    <string name="radio_button_answer_five_four">KitKat</string>
    <string name="radio_button_answer_five_five">Eclair</string>
    <string name="player_name">Player</string>
    <string name="submit_answer">submit answer</string>
    <string name="quiz_level">"Quiz : "</string>
    <string name="restart">restart</string>
    <string name="next_quiz">next quiz</string>
    <string name="summary">summary</string>
    <string name="score_text">"Score : %i"</string>
    <string name="quiz_one_hint">The answer is a year!</string>
    <string name="quiz_two_hint">The answer is a code name!</string>
    <string name="quiz_three_hint">Check one or more!</string>
    <string name="quiz_four_hint">Check only one!</string>
    <string name="end_thank_first">"Thanks for playing "</string>
    <string name="end_thank_second">"\nYour score is : "</string>
    <string name="end_thank_third">" \nCheck the wright answers."</string>
    <string name="wrong_answer">"The wright answer was "</string>
    <string name="wright_answer">"Your answer was correct ! </string>
    <string name="score">score.</string>
    <string name="wikipedia">https://en.wikipedia.org/wiki/Android_(operating_system)</string>
    <string name="picture">https://www.couponraja.in/theroyale/wp-content/uploads/2016/07/android_nougat_new_android_addition.jpg</string>
    <string name="score_value">Score: %i</string>
    <string name="player_name_istate">playerName</string>
    <string name="score_istate">score</string>
    <string name="quiz_level_istate">quizLevel</string>
    <string name="quiz_rule_istate">quizRule</string>
    <string name="submit_next_button_istate">submitNextButton</string>
    <string name="quiz_one_question_istate">quizOneQuestion</string>
    <string name="quiz_one_answer_istate">quizOneAnswer</string>
    <string name="actual_view_istate">actualView</string>
    <string name="edit_text_number_random_istate">editTextNumberRandom</string>
    <string name="edit_text_text_random_istate">editTextTextRandom</string>
    <string name="check_box_random_istate">checkBoxRandom</string>
    <string name="radio_button_random_istate">radioButtonRandom</string>

</resources>
